Fixed overflow on wide items

--- a/Web/TroyHunt.css
+++ b/Web/TroyHunt.css
@@ -164,11 +164,6 @@ blockquote
   padding-right: 588px;
 }
 
-article
-{
-  overflow: hidden;
-}
-
 #bodySideBar
 {
   margin-right: -588px;
@@ -183,6 +178,7 @@ article
 article
 {
   float: left;
+  overflow: hidden;
 }
 
   article img
@@ -734,6 +730,11 @@ footer aside
     padding-right: 0;
   }
 
+  article
+  {
+    float: none;
+  }
+
   #bodySideBar
   {
     margin-right: 0;
@@ -762,7 +763,7 @@ footer aside
 /******************************
 * Drop heading under social media
 ******************************/
-@media only screen and (max-width: 615px)
+@media only screen and (max-width: 630px)
 {
   h1
   {
